finish chat format, need to fix scrollbar

--- a/frontend/src/stylesheets/chat.scss
+++ b/frontend/src/stylesheets/chat.scss
@@ -1,34 +1,39 @@
 @import './variables.scss';
 
 .container {
+  height: 100%; 
   font-family: $proxima;
   -webkit-font-smoothing: antialiased;
-  // border-radius: 20px;
   padding: 10px;
   display: grid;
   grid-template-columns: 1.7fr 0.3fr; 
   grid-template-rows: 1fr 0.1fr; 
-  gap: 0px 0px; 
+  gap: 2px 2px; 
   grid-template-areas: 
     "Main Main"
     "input send"; 
 }
 
+
 .Main {
   background-color: $blue-600;
   border: 1px solid $orange-100;
-  border-radius: 10px;
-  overflow-y: scroll;
-  overflow-wrap:break-word;
-  grid-area: Main;
+  border-radius: 5px;
   height: 24rem;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-wrap: break-word;
+  grid-area: Main;
+  display: flex;
 }
 
 .chat-messages-ul {
-  position: relative;
   display: flex;
   flex-direction: column;
   padding: 10px;
+  height: fit-content;
+  width: 100%;
+  align-self: flex-end;
 }
 
 .chat-messages-ul li {
@@ -71,27 +76,37 @@
 }
 
 .input { 
-  grid-area: input; 
+  grid-area: input;
 }
 
 .chat-input {
   background-color: $blue-100;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 87%;
+  border-radius: 5px;
+  padding-left: 10px;
 }
 
 .send { 
   grid-area: send;
-  // height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .send button {
-  // position: absolute;
-  margin: auto;
+  border-radius: 10px;
+  background-color: $cool-gray-100;
+  color: $blue-700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100%;
+  height: 3rem;
 }
 
 .send button:hover {
   cursor: pointer;
+  background-color: $cool-gray-200;
 }
