--- a/frontend/src/stylesheets/room_lobby.scss
+++ b/frontend/src/stylesheets/room_lobby.scss
@@ -6,7 +6,7 @@
 	background-color: $background-color;
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr;
-    grid-template-rows: 1fr 1fr 7fr;
+    grid-template-rows: 1fr 1fr 8fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -62,6 +62,7 @@
     height: 4rem;
     width: 10rem;
     margin-top: 1rem;
+    text-transform: uppercase;
 }
 
 .header { 
@@ -71,7 +72,7 @@
     align-items: center;
     font-size: 30px;
     text-shadow: $text-shadow;
-
+    font-weight: 200;
 }
 
 .participants { 
@@ -129,7 +130,8 @@
 
 .members-ul {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: left;
     justify-content: center;
     font-family: $code;
     width: 100%;
